fixed the words cut off in the websites

--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@
 .Websites-wrapper {
   background-repeat: no-repeat;
   background-size: cover;
-  height: 60vh;
+  height: 65vh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -206,6 +206,10 @@
 .portfolio-cover {
     width: 100vw;
 }
+
+/* .websites-inner-wrapper {
+  margin-top: 10px;
+} */
 
 
 /*------------------------------ Contact ------------------------------*/
